--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Expletus+Sans:wght@500&family=Open+Sans&display=swap"
-        rel="stylesheet">
+        media="print" onload="this.onload=null;this.removeAttribute('media');" rel="stylesheet">
     <title>React App</title>
 </head>
 
